# Crucible

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md
.crucible/: editor-layout.ron
apps/crucible-editor/: Cargo.toml
apps/crucible-editor/src/: main.rs
crates/crucible-core/: Cargo.toml
crates/crucible-core/src/: lib.rs
crates/crucible-render/: Cargo.toml
crates/crucible-render/src/: lib.rs
crates/crucible-scripting/: Cargo.toml
crates/crucible-scripting/src/: lib.rs
crates/crucible-ui/: Cargo.toml
crates/crucible-ui/src/: app.rs  assets.rs  dock.rs  draw.rs  editor.rs  geometry.rs  input.rs  lib.rs  render.rs  scene.rs  script.rs  theme.rs
docs/: architecture.md
scripts/: main.rs
