[workspace]
members = [
    "apps/crucible-editor",
    "crates/crucible-core",
    "crates/crucible-render",
    "crates/crucible-scripting",
    "crates/crucible-ui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
crucible-core = { path = "crates/crucible-core" }
crucible-render = { path = "crates/crucible-render" }
crucible-scripting = { path = "crates/crucible-scripting" }
crucible-ui = { path = "crates/crucible-ui" }
glam = { version = "0.30", features = ["bytemuck"] }
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wgpu = "29.0"
winit = "0.30"
