[package]
name = "crucible-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crucible-ui.workspace = true
gpui.workspace = true
gpui-component.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
